Fix overlap between image and text

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,7 +29,6 @@ nav img {
 
 .article-author-img img {
   border-radius: 200px;
-  height: 200px;
 }
 
 .page-header h1 {
